[fix] checkbox alignment fixes frappe/erpnext#12727

--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -671,8 +671,9 @@ h6.uppercase, .h6.uppercase {
 
 .disabled-check {
 	color: @navbar-bg;
-	margin-right: 3px;
+	margin-right: 5px;
 	margin-bottom: -2px;
+	margin-left: 20px;
 }
 
 .like-disabled-input.for-description {
